# chatbot-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: chatwidget.h  constants.h  gamelibrarywidget.h  mainwindow.h  welcomewidget.h
include/ai/: aiengine.h  chatsessionhistory.h  contextbuilder.h  contextgenerator.h  conversationhistory.h  dialoguememory.h  entityextractor.h  intentclassifier.h  keyworddectector.h  keyworddetector.h  longtermstore.h  memorymanager.h  recomendationengine.h  recommendationengine.h  responsegenerator.h  ruleengine.h  sessionmemory.h  textprocessor.h  tfindfclassifier.h
include/database/: baseentitydao.h  baseentitydao.inl  baserelationdao.h  basesimpledao.h  conversationhistorydao.h  databasemanager.h  gamedao.h  gamedatabase.h  gamegenresdao.h  gameplatformsdao.h  gamesftsdao.h  gametagsdao.h  genredao.h  keyworddao.h  logdao.h  memorydao.h  memorylongtermdao.h  memoryshorttermdao.h  platformdao.h  relationdao.h  rulesdao.h  tagdao.h  tfidfvectordao.h  tfidfvectorsdao.h  userpreferencedao.h
include/database/structs/: conversationhistory.h  game.h  genre.h  keyword.h  logentry.h  memorylongterm.h  memoryshortterm.h  platform.h  rule.h  tag.h  tfidfvector.h  userpreference.h
include/json/: datajsonmanager.h  staticdatacache.h
resources/: resources.qrc
resources/database/: DataBase_ChatBot.db  chatbot_schema.sql  games.sql  genres.json  keywords.sql  platforms.json  rules.sql  tags.json  tags_platforms_genres.sql
src/: chatwidget.cpp  gamelibrarywidget.cpp  main.cpp  mainwindow.cpp  welcomewidget.cpp
src/ai/: aiengine.cpp  chatsessionhistory.cpp  contextbuilder.cpp  contextgenerator.cpp  conversationhistory.cpp  dialoguememory.cpp  entityextractor.cpp  intentclassifier.cpp  keyworddectector.cpp  keyworddetector.cpp  longtermstore.cpp  memorymanager.cpp  recomendationengine.cpp  recommendationengine.cpp  responsegenerator.cpp  ruleengine.cpp  sessionmemory.cpp  textprocessor.cpp  tfindfclassifier.cpp
src/database/: baserelationdao.cpp  basesimpledao.cpp  conversationhistorydao.cpp  databasemanager.cpp  gamedao.cpp  gamedatabase.cpp  gamegenresdao.cpp  gameplatformsdao.cpp  gamesftsdao.cpp  gametagsdao.cpp  genredao.cpp  keyworddao.cpp  logdao.cpp  memorydao.cpp  memorylongtermdao.cpp  memoryshorttermdao.cpp  platformdao.cpp  relationdao.cpp  rulesdao.cpp  tagdao.cpp  tfidfvectordao.cpp  tfidfvectorsdao.cpp  userpreferencedao.cpp
src/json/: datajsonmanager.cpp  staticdatacache.cpp
translations/: ChatBot_es_PA.ts
ui/: chatwidget.ui  gamelibrarywidget.ui  mainwindow.ui  welcomewidget.ui
